get news calamities for tooltip and improve UI

--- a/src/CalamityMap/CalamityMap.scss
+++ b/src/CalamityMap/CalamityMap.scss
@@ -3,4 +3,10 @@
     color: black;
     padding: 10px;
     text-align: left;
+
+    overflow-y: scroll;
+}
+
+.jvectormap-tip-news{
+    height: 200px;
 }
