--- a/src/CalamityMap/CalamityMap.scss
+++ b/src/CalamityMap/CalamityMap.scss
@@ -1,12 +1,115 @@
-.jvectormap-tip{
-    background-color: white;
-    color: black;
-    padding: 10px;
-    text-align: left;
-
-    overflow-y: scroll;
+.CalamityMap {
+    margin: 0 auto;
+    height: 600px;
+    width: 100%;
+    display: inline-block;
+    vertical-align: middle;
 }
 
-.jvectormap-tip-news{
+.popup-content {
+    margin: auto;
+    background:#FFFFFF;
+    width: 50%;
+    min-height: 250px;
+    border: 1px solid #333333;
+}
+.popup-arrow {
+    color: #333333;
+}
+
+[role='tooltip'].popup-content {
+    width: 200px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 3px;
+}
+
+.popup-overlay {
+    background: rgba(0, 0, 0, 0.5);
+}
+[data-popup='tooltip'].popup-overlay {
+    background: transparent;
+}
+
+ul.Navbar {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    background-color: #F8F8F8;
+    text-align: center;
+
+    li {
+        width: 25%;
+        font-size: 1em;
+        line-height: 50px;
+        text-align: center;
+        display: inline-block;
+        border-bottom: none;
+      }
+  
+      div {
+        text-decoration: none;
+        color: #333333;
+        display: block;
+        padding-left: 5px;
+        transition: 0.3s background-color;
+        &:hover {
+            background-color: #333333;
+            color: #F8F8F8;
+            cursor: pointer;
+        }
+    }
+}  
+
+.Content {
     height: 200px;
+    overflow-y: scroll;
+    padding: 5px;
+}
+
+ul.List {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    border-radius: 10px;
+    width: max-width;
+    min-width: 300px;
+    background: #F8F8F8;
+    overflow: hidden;
+    & li {
+      height: 2rem;
+      padding: 0.4rem 0.7rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-top: 4px solid #FFFFFF;
+      transition: 75ms ease-in;
+      &:first-child {
+        border-top: none;
+      }
+      & span {
+        border-radius: 50px;
+        padding: 0.4rem;
+        color: #F8F8F8;
+      }
+
+
+      & span.Bad {
+        background:red;
+      }
+      & span.Good {
+        background:green;
+      }
+    }
+}
+  
+.Label {
+    border-radius: 0;
+    height: 10px;
+    width: 10px;
+}
+
+.Label.Bad {
+    background:red;
+}
+.Label.Good {
+    background:green;
 }
