use max height for map

--- a/src/CalamityMap/CalamityMap.scss
+++ b/src/CalamityMap/CalamityMap.scss
@@ -1,6 +1,6 @@
 .CalamityMap {
     margin: 0 auto;
-    height: 600px;
+    height: max-height;
     width: 100%;
     display: inline-block;
     vertical-align: middle;
